# CLGLInterop

./: .gitignore  CLGLInterop.sln  CMakeLists.txt  Makefile  README.md
Fractal/: Fractal.vcxproj  Fractal.vcxproj.filters  OpenCLUtil.cpp  OpenCLUtil.h  fractal.cl  main.cpp
Fractal/stb_image/: stb_image.c
assets/: fractal.cl  julia.cl  partsim.frag  partsim.vert  random.cl
common/: OpenCLUtil.cpp  OpenCLUtil.h  OpenGLUtil.cpp  OpenGLUtil.h
examples/: fractal.cpp  julia.cpp  partsim.cpp
external_sources/glad/include/glad/: glad.h
external_sources/glad/src/: glad.c
